<resources>
    <string name="app_name">Movie mania</string>
    <string name="api_key">cd458af3e465c915faedf516d4f513c0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_amovie">AboutAMovieActivity</string>

    <string name="action_settings">Settings</string>
    <string name="genre">Genre</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="view_all">VIEW ALL</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="Top_rated">Top Rated</string>
</resources>
